Added readmed & updated (c) to 2014

--- a/gamevoice.vcxproj
+++ b/gamevoice.vcxproj
@@ -269,6 +269,9 @@
     <ClCompile Include="src\plugin.c" />
     <ClCompile Include="src\usbHidCommunication.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="readme.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
