--- a/package_x64.ini
+++ b/package_x64.ini
@@ -3,4 +3,4 @@ Type = Plugin
 Author = JoeBilly
 Version = 1.3
 Platforms = win64
-Description = "This plugin allows you to use the Microsoft Sidewinder Game Voice USB device to control TeamSpeak 3.\nNo additional software is required.\n\nhttps://sourceforge.net/projects/ts3gamevoice/"
+Description = "This plugin provides support for the Microsoft Sidewinder Game Voice USB device in TeamSpeak 3 Client.\nNo additional software is required.\n\nhttps://sourceforge.net/projects/ts3gamevoice/"
